--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "redux-persist": "^6.0.0"
+    "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
