--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^8.2.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "twilio": "^5.0.2"
+    "socket.io": "^4.7.5",
+    "twilio": "^5.0.2",
+    "ws": "^8.16.0"
   }
 }
