--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
-    "flowbite": "^2.3.0",
+    "bootstrap": "^5.3.3",
+    "debugsensei": "^1.2.2",
     "flowbite-react": "^0.7.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
